--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -1,78 +1,78 @@
 {
-  "landing":{
-     "title":{
-        "meet":"Знакомьтесь - Ваш",
-        "employee":"кандидат на работу Уна"
+   "landing": {
+     "title": {
+       "meet": "Познакомьтесь с Уной,",
+       "employee": "первым цифровым администратором на базе искусственного интеллекта"
      },
-     "subtitle":"Уна улучшает качество обслуживания гостей и увеличивает количество прямых бронирований",
-     "search":{
-        "placeholder":"Найдите ваш отель",
-        "button":"Найти отель",
-        "processing":"Поиск...",
-        "clear":"Очистить выбор"
+     "subtitle": "Улучшите впечатления гостей и максимизируйте прямые бронирования",
+     "search": {
+       "placeholder": "Введите название вашего отеля",
+       "button": "Обучить сотрудника",
+       "processing": "Поиск...",
+       "clear": "Очистить выбор"
      },
-     "discover":"Узнайте больше о возможностях Уны",
-     "loading":{
-        "booking":"Искусственный Интеллект упрощает бронирование",
-        "booking_desc":"Уна оптимизирует бронирование номеров и отправляет мгновенные подтверждения по email или SMS, обеспечивая удобный процесс для ваших гостей.",
-        "assistance":"Персональная поддержка",
-        "assistance_desc":"Уна предлагает индивидуальные рекомендации, помогает гостям бронировать рестораны и мероприятия, предоставляет информацию о местных достопримечательностях.",
-        "operations":"Комплексное управление отелем",
-        "operations_desc":"От интеграции с PMS и CRM до запросов гостей на уборку и обслуживание - Уна объединяет все программы отеля  в единую систему эффективного управления.",
-        "revenue":"Превращайте диалоги в доход",
-        "revenue_desc":"Уна увеличивает количество прямых бронирований, собирает предпочтения гостей и повышает доход через персонализированный маркетинг и удобный процесс бронирования."
+     "discover": "Запишитесь на демонстрацию и узнайте больше о возможностях Уны",
+     "loading": {
+       "booking": "Упростите бронирование с помощью умных технологий",
+       "booking_desc": "Уна оптимизирует бронирование номеров и отправляет мгновенные подтверждения по электронной почте или SMS, обеспечивая удобный процесс для ваших гостей.",
+       "assistance": "Персонализированная поддержка",
+       "assistance_desc": "Уна предоставляет индивидуальные рекомендации, помогает гостям бронировать рестораны и мероприятия, а также предлагает информацию о местных достопримечательностях.",
+       "operations": "Комплексное управление отелем",
+       "operations_desc": "От интеграции CRM до запросов на уборку и техническое обслуживание - Уна объединяет все системы отеля для эффективного управления.",
+       "revenue": "Превращайте разговоры в доход",
+       "revenue_desc": "Уна увеличивает прямые бронирования, собирает предпочтения гостей и повышает доход через персонализированный маркетинг и оптимизированный процесс бронирования."
      },
-     "setup":{
-        "ready":"Уна готова улучшить обслуживание гостей!",
-        "service":"Всего несколько шагов до начала работы круглосуточного сервиса!",
-        "interactions":"Вы на пути к впечатляющему персонализированному обслуживанию.",
-        "support":"Ваши гости оценят мгновенную доступность Уны 24/7!",
-        "satisfaction":"Шаг за шагом к повышению удовлетворенности ваших гостей.",
-        "bookings":"Готово – переходим к оптимизации прямых бронирований.",
-        "excellence":"Последний шаг к самому эффективному управлению отелем."
+     "setup": {
+       "ready": "Ваш виртуальный администратор почти готов улучшить обслуживание гостей!",
+       "service": "Всего несколько шагов до запуска круглосуточного сервиса!",
+       "interactions": "Вы на пути к впечатляющему персонализированному обслуживанию.",
+       "support": "Ваши гости оценят мгновенную поддержку администратора!",
+       "satisfaction": "Шаг за шагом к повышению удовлетворенности гостей.",
+       "bookings": "Почти готово - переходим к оптимизации прямых бронирований.",
+       "excellence": "Последний шаг к инновационному управлению отелем."
      }
-  },
-  "contact":{
-     "title":"Протестируйте цифрового сотрудника",
-     "name":"Введите ваше имя",
-     "email":"Введите ваш email",
-     "phone":"Введите ваш номер телефона",
-     "terms":{
-        "text":"Нажимая \"Начать тестирование\", вы соглашаетесь с",
-        "service":"Условиями использования",
-        "and":"и",
-        "privacy":"Политикой конфиденциальности"
+   },
+   "contact": {
+     "title": "Протестируйте вашего виртуального администратора",
+     "name": "Введите ваше имя",
+     "email": "Введите вашу электронную почту",
+     "phone": "Введите ваш номер телефона",
+     "terms": {
+       "text": "Нажимая «Начать тестирование», вы соглашаетесь с",
+       "service": "Условиями использования",
+       "and": "и",
+       "privacy": "Политикой конфиденциальности"
      },
-     "button":{
-        "loading":"Настройка...",
-        "start":"Начать тестирование"
+     "button": {
+       "loading": "Настройка...",
+       "start": "Начать тестирование"
      }
-  },
-  "property":{
-     "status":{
-        "ai":"Статус системы",
-        "ready":"Готово",
-        "parsing":"Анализ...",
-        "response":"Время ответа",
-        "availability":"Доступность",
-        "time":"~1 сек",
-        "hours":"24/7"
+   },
+   "property": {
+     "status": {
+       "ai": "Статус системы",
+       "ready": "Готово",
+       "parsing": "Анализ...",
+       "response": "Время отклика",
+       "availability": "Доступность",
+       "time": "~1 сек",
+       "hours": "24/7"
      },
-     "description":{
-        "loading":"Загрузка информации..."
+     "description": {
+       "loading": "Загрузка описания..."
      }
-  },
-  "call":{
-     "title":"Ваш Цифровой сотрудник ",
-     "ready":"готов к работе",
-     "subtitle":"Позвоните сейчас, чтобы начать разговор",
-     "button":{
-        "call":"Позвонить",
-        "end":"Завершить"
+   },
+   "call": {
+     "title": "Ваш виртуальный администратор",
+     "ready": "готов",
+     "subtitle": "Позвоните сейчас, чтобы начать разговор",
+     "button": {
+       "call": "Позвонить",
+       "end": "Завершить звонок"
      },
-     "error":{
-        "load":"Не удалось загрузить систему связи. Пожалуйста, попробуйте позже.",
-        "init":"Ошибка инициализации системы связи"
+     "error": {
+       "load": "Не удалось загрузить систему связи. Пожалуйста, попробуйте позже.",
+       "init": "Ошибка инициализации системы связи"
      }
-  }
-}
+   }
+ }
