ru locale changes

--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -2,7 +2,7 @@
    "landing": {
      "title": {
        "meet": "Познакомьтесь с Уной,",
-       "employee": "первым цифровым администратором на базе искусственного интеллекта"
+       "employee": "первым цифровым сотрудником службы приема и размещения на базе искусственного интеллекта"
      },
      "subtitle": "Улучшите впечатления гостей и максимизируйте прямые бронирования",
      "search": {
@@ -23,17 +23,17 @@
        "revenue_desc": "Уна увеличивает прямые бронирования, собирает предпочтения гостей и повышает доход через персонализированный маркетинг и оптимизированный процесс бронирования."
      },
      "setup": {
-       "ready": "Ваш виртуальный администратор почти готов улучшить обслуживание гостей!",
+       "ready": "Ваш цифровой сотрудник службы приема и размещения почти готов улучшить обслуживание гостей!",
        "service": "Всего несколько шагов до запуска круглосуточного сервиса!",
        "interactions": "Вы на пути к впечатляющему персонализированному обслуживанию.",
-       "support": "Ваши гости оценят мгновенную поддержку администратора!",
+       "support": "Ваши гости оценят мгновенную поддержку вашего цифрового сотрудника!",
        "satisfaction": "Шаг за шагом к повышению удовлетворенности гостей.",
        "bookings": "Почти готово - переходим к оптимизации прямых бронирований.",
        "excellence": "Последний шаг к инновационному управлению отелем."
      }
    },
    "contact": {
-     "title": "Протестируйте вашего виртуального администратора",
+     "title": "Протестируйте вашего цифрового сотрудника службы приема и размещения",
      "name": "Введите ваше имя",
      "email": "Введите вашу электронную почту",
      "phone": "Введите ваш номер телефона",
@@ -63,7 +63,7 @@
      }
    },
    "call": {
-     "title": "Ваш виртуальный администратор",
+     "title": "Ваш цифровой сотрудник службы приема и размещения",
      "ready": "готов",
      "subtitle": "Позвоните сейчас, чтобы начать разговор",
      "button": {
